--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     <p>I'm a tech enthusiast and passionate about improving my skills as a developer.</p>
                 </header>
                 <a href="#work" class="jumplink pic">
-                    <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-                    <img src="images/nels3.JPG" alt="Nelson Guerra" />
+                    <img src="images/nels3.jpg" alt="Nelson Guerra" />
                 </a>
             </article>
 
