--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav id="nav">
             <a href="#" class="icon solid fa-home"><span>Home</span></a>
             <a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
-            <a href="https://github.com/XXFalcon9HeavyXX/NelsonGuerra.Github.io/projects" class="icon brands fa-github"><span>GitHub</span></a>
+            <a href="https://github.com/XXFalcon9HeavyXX" class="icon brands fa-github"><span>GitHub</span></a>
         </nav>
 
         <!-- Main -->
