--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <ul class="copyright">
                 <li><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Developer</span></li>
                 <li>
-                    <a href="" class="icon brands fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/nelson-guerra-7075b413a/" class="icon brands fa-linkedin"></a>
                 </li>
             </ul>
         </div>
