--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <nav id="nav">
             <a href="#" class="icon solid fa-home"><span>Home</span></a>
             <a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
+            <a href="#contact" class="icon solid fa-laptop"><span>Languages</span></a>
             <a href="https://github.com/XXFalcon9HeavyXX" class="icon brands fa-github"><span>GitHub</span></a>
         </nav>
 
@@ -69,6 +70,19 @@
                         </div>
                     </div>
                 </section>
+            </article>
+            
+            <article id="contact" class="panel intro">
+                <header>
+                    <h1>Skills</h1>
+                    <p><span style="color: rgba(15, 15, 15, 0.678);">Java</span>
+                        <p><span style="color: rgba(15, 15, 15, 0.678);">C#</span>
+                            <p><span style="color: rgba(15, 15, 15, 0.678);">Python</span>
+                                <p><span style="color: rgba(15, 15, 15, 0.678);">HTML5 | CSS3 | Javascript</span>
+                </header>
+                <a href="#work" class="jumplink pic">
+                    <img src="images/developer.jpg" alt="Nelson Guerra" />
+                </a>
             </article>
 
         </div>
