--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                     <div class="row">
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">OmniFood Website Project</p>
-                            <a href="https://xxfalcon9heavyxx.github.io/OmniFood.Github.io/" class="image fit"><img src="images/omnifood.png" alt=""></a>
+                            <a href="https://xxfalcon9heavyxx.github.io/OmniFood.Github.io/" class="image fit"><img src="images/omnifood.png" alt="Omnifood"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
-                            <a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+                            <p class="paragraph">Java ATM</p>
+                            <a href="#" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
