--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Java ATM</p>
-                            <a href="#" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
+                            <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
