--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <article id="home" class="panel intro">
                 <header>
                     <h1>Nelson Guerra</h1>
-                    <p><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Developer</span></p>
+                    <p><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Software Developer</span></p>
                     <p>I'm a tech enthusiast and passionate about improving my skills as a developer.</p>
                 </header>
                 <a href="#work" class="jumplink pic">
@@ -91,7 +91,7 @@
         <!-- Footer -->
         <div id="footer">
             <ul class="copyright">
-                <li><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Developer</span></li>
+                <li><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Software Developer</span></li>
                 <li>
                     <a href="https://www.linkedin.com/in/nelson-guerra-7075b413a/" class="icon brands fa-linkedin"></a>
                 </li>
