--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <header>
                     <h1>Nelson Guerra</h1>
                     <p><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Software Developer</span></p>
-                    <p>I'm a tech enthusiast and passionate about improving my skills as a developer.</p>
+                    <p>I'm a tech enthusiast and passionate about improving my skills as a Software Developer.</p>
                 </header>
                 <a href="#work" class="jumplink pic">
                     <img src="images/nels3.jpg" alt="Nelson Guerra" />
