--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h2>Projects</h2>
                 </header>
                 <p>
-                    All my projects are in Github, please feel free to check out my code.
+                    Click on an image to see more! All my projects are located in Github, please feel free to check out my code. 
                 </p>
                 <section>
                     <div class="row">
