--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="icon solid fa-home"><span>Home</span></a>
             <a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
             <a href="#contact" class="icon solid fa-laptop"><span>Languages</span></a>
-            <a href="https://github.com/XXFalcon9HeavyXX" class="icon brands fa-github"><span>GitHub</span></a>
+            <a href="https://github.com/IT-Nelson-Guerra" class="icon brands fa-github"><span>GitHub</span></a>
         </nav>
 
         <!-- Main -->
