--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="row">
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">OmniFood Website Project</p>
-                            <a href="https://xxfalcon9heavyxx.github.io/OmniFood.Github.io/" class="image fit"><img src="images/omnifood.png" alt="Omnifood"></a>
+                            <a href="https://it-nelson-guerra.github.io/OmniFood.Github.io/" class="image fit"><img src="images/omnifood.png" alt="Omnifood"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Java ATM</p>
