--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="icon solid fa-home"><span>Home</span></a>
             <a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
             <a href="#contact" class="icon solid fa-laptop"><span>Languages</span></a>
-            <a href="https://github.com/IT-Nelson-Guerra" class="icon brands fa-github"><span>GitHub</span></a>
+            <a href="https://github.com/IT-Nelson-Guerra" target="_blank" class="icon brands fa-github"><span>GitHub</span></a>
         </nav>
 
         <!-- Main -->
@@ -51,23 +51,23 @@
                     <div class="row">
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">OmniFood Website Project</p>
-                            <a href="https://it-nelson-guerra.github.io/OmniFood.Github.io/" class="image fit"><img src="images/omnifood.png" alt="Omnifood"></a>
+                            <a href="https://it-nelson-guerra.github.io/OmniFood.Github.io/" target="_blank" class="image fit"><img src="images/omnifood.png" alt="Omnifood"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Java ATM</p>
-                            <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
+                            <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io" target="_blank" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
-                            <a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+                            <a href="#" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
-                            <a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+                            <a href="#" target="_blank" class="image fit"><img src="images/pic04.jpg" alt=""></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
-                            <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+                            <a href="#" target="_blank" class="image fit"><img src="images/pic05.jpg" alt=""></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
-                            <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+                            <a href="#" target="_blank" class="image fit"><img src="images/pic06.jpg" alt=""></a>
                         </div>
                     </div>
                 </section>
@@ -93,7 +93,7 @@
             <ul class="copyright">
                 <li><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Software Developer</span></li>
                 <li>
-                    <a href="https://www.linkedin.com/in/nelson-guerra-7075b413a/" class="icon brands fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/nelson-guerra-7075b413a/" target="_blank" class="icon brands fa-linkedin"></a>
                 </li>
             </ul>
         </div>
