--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                             <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io" target="_blank" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
+                            <p class="paragraph">Adare Restaurant</p>
                             <a href="#" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
