--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Adare Restaurant</p>
-                            <a href="#" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+                            <a href="#" target="_blank" class="image fit"><img src="images/adare.png" alt="Adare Restaurant"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <a href="#" target="_blank" class="image fit"><img src="images/pic04.jpg" alt=""></a>
