--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Java ATM</p>
-                            <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io" target="_blank" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
+                            <a href="https://github.com/XXFalcon9HeavyXX/JavaATM.Github.io/" target="_blank" class="image fit"><img src="images/atm.jpg" alt="ATM"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <p class="paragraph">Adare Restaurant</p>
-                            <a href="#" target="_blank" class="image fit"><img src="images/adare.png" alt="Adare Restaurant"></a>
+                            <a href="https://it-nelson-guerra.github.io/AdareRestaurant.Github.io/" target="_blank" class="image fit"><img src="images/adare.png" alt="Adare Restaurant"></a>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
                             <a href="#" target="_blank" class="image fit"><img src="images/pic04.jpg" alt=""></a>
