--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <h1>Nelson Guerra</h1>
                     <p><span style="color: rgba(15, 15, 15, 0.678);">IT Professional |</span> <span style="color: rgb(226, 43, 52);">Software Developer</span></p>
                     <p>I'm a tech enthusiast and passionate about improving my skills as a Software Developer.</p>
+                    
+                    <a href="mailto:guerranelson1030@gmail.com?Subject=Hiring">Contact Me</a>
                 </header>
                 <a href="#work" class="jumplink pic">
                     <img src="images/nels3.jpg" alt="Nelson Guerra" />
